--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 ffmpeg-python
-omegaconf
+omegaconf==2.3.0
 onnx
 pycuda
-numpy
-opencv-python
-gradio
-scikit-image
-insightface
+numpy==1.26.4
+opencv-python==4.10.0.84
+gradio==4.40.0
+scikit-image==0.24.0
+insightface==0.7.3
 huggingface_hub[cli]
+onnxruntime==1.18.1
+mediapipe==0.10.14
